--- a/ticket/forms/submit_ticket_step3.twig
+++ b/ticket/forms/submit_ticket_step3.twig
@@ -42,8 +42,10 @@
                 <span class="department-name">{{ department.frontend_name }}</span>
             </div>
         </div>
+		
+	{% include 'frontend.' ~ template ~ '.forms.custom_fields' with {'new': true} %}
 
-        <div class="sp-form-row">
+        <div class="sp-form-row sp-hidden">
             {{ form_label('priority', Lang.choice('ticket.priority', 1)) }}
             <div class="sp-input-container">
                 {{ form_select('priority', department_priorities, null, {'autofocus': 'autofocus'}) }}
@@ -155,8 +157,6 @@
                 </div>
             </div>
         </div>
-
-        {% include 'frontend.' ~ template ~ '.forms.custom_fields' with {'new': true} %}
 
         {% if showCaptcha %}
             {% if Captcha.isVisible() %}
