--- a/user/login.twig
+++ b/user/login.twig
@@ -58,7 +58,7 @@
             <div class="sp-text-center">
                 {% if SamlAuth.exists(SamlAuth.frontendGuard(current_brand(false))) %}
                     <div class="sp-description sp--mx-6 sp-my-6 sp-border-b sp-border-secondary sp-text-center sp-leading-0">
-                        <span class="sp-bg-primary sp-px-4">{{ Lang.get('general.or') }}</span>
+                        <span class="sp-bg-primary sp-px-4">Click below to log in</span>
                     </div>
 
                     <input type="button" class="saml sp-button"
